[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Font/RetroGaming.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/Textbox.gd" type="Script" id=2]
[ext_resource path="res://Scripts/UI/TextboxContainer.gd" type="Script" id=3]
[ext_resource path="res://Assets/GameUI/DialogBox/DialogBox.png" type="Texture" id=4]
[ext_resource path="res://Scenes/UI/End.gd" type="Script" id=5]

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 1216, 122 )

[sub_resource type="Theme" id=1]
Panel/styles/panel = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=6]
Panel/styles/panel = SubResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[node name="ConversationBox" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="TextboxContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -720.0
margin_right = -64.0
margin_bottom = -598.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="TextboxContainer"]
margin_right = 1216.0
margin_bottom = 122.0
theme = SubResource( 1 )

[node name="MarginContainer" type="Control" parent="TextboxContainer"]
margin_bottom = 122.0
size_flags_horizontal = 0

[node name="Panel" type="Panel" parent="TextboxContainer/MarginContainer"]
visible = false
margin_left = 130.0
margin_top = 16.0
margin_right = 1086.0
margin_bottom = 106.0
rect_min_size = Vector2( 1070, 90 )
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0

[node name="PanelIcon" type="Panel" parent="TextboxContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 106.0
margin_bottom = 106.0
rect_min_size = Vector2( 90, 90 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 6 )

[node name="Speaker" type="TextureRect" parent="TextboxContainer/MarginContainer/PanelIcon"]
margin_right = 90.0
margin_bottom = 90.0
expand = true

[node name="HBoxContainer" type="Control" parent="TextboxContainer/MarginContainer"]
margin_left = 130.0
margin_top = 16.0
margin_right = 1200.0
margin_bottom = 106.0

[node name="Start" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 26.0
rect_min_size = Vector2( 24, 0 )
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )

[node name="Text" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
margin_left = 28.0
margin_right = 1042.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
autowrap = true
clip_text = true

[node name="End" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
margin_left = 1046.0
margin_top = 64.0
margin_right = 1070.0
margin_bottom = 90.0
rect_min_size = Vector2( 24, 0 )
size_flags_horizontal = 0
size_flags_vertical = 8
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="TextboxContainer/MarginContainer/HBoxContainer/End"]
wait_time = 0.5
autostart = true

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="TextboxContainer/MarginContainer/HBoxContainer/End/Timer" to="TextboxContainer/MarginContainer/HBoxContainer/End" method="_on_Timer_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
